--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
   "icons": {
     "128": "icons/icon.png"
   },
+  "offline_enabled": true,
   "default_locale": "en",
   "background": {
     "scripts": [
@@ -17,11 +18,11 @@
     ],
     "persistent": true
   },
-  "options_page": "src/options_custom/index.html",
+  "options_page": "src/override/override.html#!/settings",
   "browser_action": {
     "default_icon": "icons/icon.png",
     "default_title": "browser action demo",
-    "default_popup": "src/browser_action/browser_action.html"
+    "default_popup": "src/override/override.html"
   },
   "web_accessible_resources": [
     "img/*",
